cluster/apps/telegram/gmvitabot/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app gmvitabot
  namespace: telegram
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
      app.kubernetes.io/instance: *app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
        app.kubernetes.io/instance: *app
    spec:
      containers:
        - name: *app
          image: ghcr.io/elraro/gmvitabot:latest@sha256:858ce32d4eccc78e832078e90b4fb48acb16e2ec822edbd191c8d0a56d72fc93
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 15m
              memory: 105Mi
            limits:
              cpu: 30m
              memory: 150Mi
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
