cluster/apps/telegram/gmvitabot/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app gmvitabot
  namespace: telegram
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: external
  rules:
    - host: "botstelegram.${SECRET_DOMAIN}"
      http:
        paths:
          - path: "/${SECRET_GMVITABOT_TOKEN}/"
            pathType: Prefix
            backend:
              service:
                name: gmvitabot
                port:
                  number: 8080
  tls:
    - hosts:
        - "botstelegram.${SECRET_DOMAIN}"
